name:                rss-conduit
version:             0.1.0.0
synopsis:            Streaming parser/renderer for the RSS 2.0 standard.
description:
  This library implements the RSS 2.0 syndication format (<http://cyber.law.harvard.edu/rss/rss.html>) as a 'conduit' parser/renderer.
license:             OtherLicense
license-file:        LICENSE
author:              koral
maintainer:          koral att mailoo dott org
-- copyright:
category:            XML, Conduit
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
    type:     git
    location: git://github.com/k0ral/rss-conduit.git

library
  exposed-modules:
    Text.RSS.Conduit.Parse
    Text.RSS.Conduit.Render
    Text.RSS.Types
  -- other-modules:
  build-depends:
      base >= 4.8 && < 5
    , conduit
    , conduit-parse
    , containers
    , exceptions
    , foldl
    , lens
    , mono-traversable
    , network-uri
    , parsers
    , safe
    , text
    , time >= 1.5
    , timerep >= 2.0
    , total >= 1.0.4
    , xml-conduit >= 1.3
    , xml-conduit-parse >= 0.3
    , xml-types
  default-language:    Haskell2010

test-suite Tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      rss-conduit
    , base >= 4.8 && < 5
    , conduit
    , conduit-parse
    , data-default
    , exceptions
    , hlint
    , lens
    , mono-traversable
    , network-uri
    , parsers
    -- QuickCheck
    -- , quickcheck-instances
    , resourcet
    , tasty
    , tasty-hunit
    -- , tasty-quickcheck
    , time >= 1.5
    , text
    , xml-conduit >= 1.3
    , xml-conduit-parse >= 0.3
    , xml-types
  default-language:    Haskell2010
